--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,8 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-
 body {
     font-family: Arial, Helvetica, sans-serif;
-
+    background-color: whitesmoke;
+    margin: 0;
+    padding: 0;
 }
 
 
@@ -19,14 +16,8 @@ table{
     height: 100%;
 }
 
-.menu {
-   /* background-color: rgb(12, 9, 9);*/
-    
-    
-}
-
 .menu h1{
-    color: rgb(158, 114, 4);
+    color:rgb(94, 3, 180);
     text-align: left;
     margin: 0px 16px 16px 0px;
     font-size: large;
@@ -34,54 +25,34 @@ table{
 }
 
 .menu h1:hover{
-    color:rgb(94, 3, 180) ;
+    color: rgb(158, 114, 4);
 }
 
 .menu a{
     text-decoration: none;
 }
 
-main {
-    height: 100vh;
-    background-color: rgb(94, 3, 180);
-}
-
 div nav a{
     margin: 16px;
-    color: rgb(158, 114, 4);
+    color:rgb(94, 3, 180);
     font-size: large;
     font-family: cursive;
+    text-align: right;
 }
 
 div nav a:hover{
-    color:rgb(94, 3, 180) ;
+    color: rgb(158, 114, 4);
 }
 
 main img {
     width: 60%;
     height: 600px;
-    object-fit: cover;
-    
+    object-fit: cover;   
     
 }
 
 main images{
     padding-right: 20vh;
-}
-
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100px;
-    color: rgb(158, 114, 4);
-    text-align: left;
-    font-family: cursive;
-}
-
-.footer a{
-    text-decoration: none;
 }
 
 .slider{
@@ -130,3 +101,89 @@ main images{
     }
     
 }
+
+.contact-me{
+	width: 450px;
+	background: #fff;
+    box-shadow: 0 0 20px 0 #999;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute; 
+}
+
+.contact-me h1{
+    text-align: center;
+    padding: 0 0 20px 0;
+    border-bottom: 1px solid silver;
+    color:rgb(94, 3, 180);
+    font-family: cursive;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    font-size: 16px;
+}
+
+form{
+    margin: 35px;
+}
+
+.input-field{
+    width: 350px;
+    height: 40px;
+    margin-top: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: 16px;
+    border: 1px solid #777;
+    border-radius: 14px;
+    outline: none;
+}
+
+.text-area{
+    height: 50px;
+    padding-top: 10px;
+    margin-bottom: 10px;
+    
+}
+
+.submit{
+    width: 50%;
+	padding: 10px 30px;
+	cursor: pointer;
+	display: block;
+	margin: auto;
+	border: 0;
+	outline: none;
+	border-radius: 14px;
+    font-family: cursive;
+    font-size: 16px;
+    color:rgb(94, 3, 180);
+    background: whitesmoke;
+}
+
+.submit:hover{
+    background: linear-gradient(to right,rgb(94, 3, 180), #ffad06, rgb(94, 3, 180));
+    color: #fff;
+}
+
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+    color:rgb(94, 3, 180);
+    text-align: left;
+    font-family: cursive;
+}
+
+.footer a{
+    text-decoration: none;
+}
+.foot{
+    color:rgb(94, 3, 180);
+    font-weight: 900;
+    font-family: cursive;
+}
+
