--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,14 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: whitesmoke;
+*{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
+
+body {
+    background-color: whitesmoke;
+    
+}
 
 img{
     width: 100px;
@@ -44,6 +48,12 @@ div nav a:hover{
     color: rgb(158, 114, 4);
 }
 
+main{
+    min-height: 100vh;
+    margin-top: 5%;
+    
+}
+
 main img {
     width: 60%;
     height: 600px;
@@ -69,6 +79,7 @@ main images{
 .slider figure img{
     float: left;
     width: 20%;
+    max-width: 95%;
 }
 
 @keyframes slider {
@@ -100,6 +111,98 @@ main images{
         left: -400%;
     }
     
+}
+
+.intro h1{
+    font-size: large;
+    margin-bottom: 20px;
+    letter-spacing: 2px;
+}
+span{
+    color:rgb(94, 3, 180);
+    
+}
+
+.intro-p h1{
+    font-size: large;
+    margin-bottom: 20px;
+    letter-spacing: 2px;
+    
+}
+
+.intro-p{
+    letter-spacing: 1px;
+    font-size: 16px;
+    margin-bottom: 45px;
+    line-height: 28px;
+}
+
+.intro-p a{
+    text-decoration: none;
+}
+
+.btn{
+    width: 30%;
+    padding: 10px 30px;
+    cursor: pointer;
+    display: block;
+    margin: auto;
+    border: 0;
+    outline: none;
+    border-radius: 14px;
+    font-family: cursive;
+    font-size: 16px;
+    transition: .4s;
+}
+    
+.btn:hover{
+    background: linear-gradient(to right,rgb(94, 3, 180), #ffad06, rgb(94, 3, 180));
+    color: #fff;
+
+}
+
+.about {
+    width: 100%;
+    padding: 78px 0px;
+}
+
+.about img{
+    height: auto;
+    width: 420px;
+    border-radius: 10%;
+}
+
+.about-text{
+    width: 550px;
+}
+
+.about-me{
+    width: 1130px;
+    max-width: 95%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.about-text h2{
+    color:rgb(94, 3, 180);
+    font-size: large;
+    margin-bottom: 20px;
+    letter-spacing: 2px;
+    font-family: cursive;
+}
+
+.about-text p{
+    letter-spacing: 1px;
+    font-size: 16px;
+    margin-bottom: 45px;
+    line-height: 28px;
+}
+
+.about-text a{
+    text-decoration: none;
+    font-weight: bold;
 }
 
 .contact-me{
@@ -159,6 +262,7 @@ form{
     font-size: 16px;
     color:rgb(94, 3, 180);
     background: whitesmoke;
+    transition: .4s;
 }
 
 .submit:hover{
@@ -168,22 +272,47 @@ form{
 
 
 .footer {
-    position: fixed;
+    position: sticky;
     left: 0;
-    bottom: 0;
+    top: 100%;
     width: 100%;
-    height: 100px;
-    color:rgb(94, 3, 180);
+    padding-left: 20vh;
+    padding-top: 30px;
     text-align: left;
     font-family: cursive;
+    background-color: rgb(94, 3, 180);
+    display: inline-block;
+    min-height: 200px;
+    margin-bottom: 25px;
 }
 
-.footer a{
-    text-decoration: none;
-}
-.foot{
-    color:rgb(94, 3, 180);
-    font-weight: 900;
+.footer h1{
+    color:whitesmoke;
     font-family: cursive;
+    font-size: 16px;
 }
+
+.footer .icons .social img{
+    width: 40px;
+    height: 40px;
+    margin: 0 15px;
+    border-radius: 50%;
+    margin-top: 30px;
+    position: inherit;
+    
+}
+
+.embed-map{
+    width: 300px;
+    height: 200px;
+    float: right;
+    padding-right: 20px;
+    padding-bottom: 25px;
+}
+
+/*.about{
+    text-align: center;
+    justify-content: center;
+    padding-top: 200px;
+}*/
 
